--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 	<ul>
-		<li><a href="/">Index</a></li>
+		<li><a href="/">Home</a></li>
 		<li><a href="/designer">Designer</a></li>
 		<li><a href="/map">Map</a></li>
 	</ul>
