--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 	<title>Garden Planner (Name Subject to Change)</title>
 </head>
 <body>
+    <h1 align="center">Garden Locations</h1>
+    {% include 'navigation.html' %}
 	<p>This is the index</p>
 	<p>Test test test</p>
 </body>
