--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -5,6 +5,7 @@
 	<ul>
 		<li><a href="/">Home</a></li>
 		<li><a href="/designer">Designer</a></li>
-		<li><a href="/map">Map</a></li>
+		<li><a href="/map">Locations</a></li>
+        <li><a href="/plan">Planner</a></li>
 	</ul>
 </body>
