--- a/static/styles/navigation.css
+++ b/static/styles/navigation.css
@@ -3,22 +3,27 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: limegreen;
 }
 
 li {
     float: left;
+    width: 300px;
+    margin: auto;
+    
+
 }
 
 li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
-    padding: 14px 16px;
+    width: 200px;
+    padding: 20px 20px;
     text-decoration: none;
 }
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #111;
+    background-color: lawngreen;
 }
