Push test before demo

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,6 @@
     {% include 'navigation.html' %}
 	<p>This is the index</p>
 	<p>Test test test</p>
+	<p>Keith Simpson rules!</p>
 </body>
 </html>
