--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,6 @@
 <body>
     <h1 align="center">Garden Locations</h1>
     {% include 'navigation.html' %}
-	<p>This is the index</p>
-	<p>Test test test</p>
-	<p>Keith Simpson rules!</p>
+	<p>More to come soon!</p>
 </body>
 </html>
