--- a/static/styles/navigation.css
+++ b/static/styles/navigation.css
@@ -21,6 +21,7 @@ li a {
     width: 200px;
     padding: 20px 20px;
     text-decoration: none;
+    font: sans-serif;
 }
 
 /* Change the link color to #111 (black) on hover */
