--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	
+	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/navigation.css')}}">
 	<title>Garden Planner (Name Subject to Change)</title>
 </head>
 <body>
