--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/navigation.css')}}">
-	<title>Garden Planner (Name Subject to Change)</title>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/main.css')}}">
+	<title>Garden Planner</title>
 </head>
 <body>
     <h1 align="center">Garden Locations</h1>
