--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
 	<title>Garden Planner</title>
 </head>
 <body>
-    <h1 align="center">Garden Locations</h1>
+    <h1 align="center">Garden Planner</h1>
     {% include 'navigation.html' %}
-	<p>More to come soon!</p>
+	<p>Our goal is to design solutions that enable collective horticultural efforts, such as community gardens, to effectively organize their resources in the pursuit of common goals.</p>
+    <p>Our technology will enable gardeners to design, optimize, and plan their gardens, as well as optionally account for resources and inventory available to them.</p>
 </body>
 </html>
