--- a/templates/maps.html
+++ b/templates/maps.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
+    {% include 'navigation.html' %}
     <!--The div element for the map -->
     <div id="map"></div>
     <script>
