--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,3 +1,4 @@
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/navigation.css')}}">
 	<ul>
 		<li><a href="/">Home</a></li>
 		<li><a href="/designer">Designer</a></li>
