Aesthetic fixes, basic functionality fixes, updates

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,6 +1,8 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/navigation.css')}}">
+    <div class="navbar">
 	<ul>
 		<li><a href="/">Home</a></li>
 		<li><a href="/designer">Designer</a></li>
 		<li><a href="/map">Locations</a></li>
 	</ul>
+    </div>
