--- a/static/styles/navigation.css
+++ b/static/styles/navigation.css
@@ -1,12 +1,12 @@
-ul {
+.navbar ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: limegreen;
+    background-color: #d0f0c0;
 }
 
-li {
+.navbar li {
     float: left;
     width: 300px;
     margin: auto;
@@ -14,7 +14,7 @@ li {
 
 }
 
-li a {
+.navbar li a {
     display: block;
     color: black;
     text-align: center;
@@ -25,6 +25,6 @@ li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: lawngreen;
+.navbar li a:hover {
+    background-color: #f1fbec;
 }
