--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,13 @@
 <body>
     <h1 align="center">Garden Planner</h1>
     {% include 'navigation.html' %}
-	<p>Our goal is to design solutions that enable collective horticultural efforts, such as community gardens, to effectively organize their resources in the pursuit of common goals.</p>
-    <p>Our technology will enable gardeners to design, optimize, and plan their gardens, as well as optionally account for resources and inventory available to them.</p>
+    <p>Garden Planner provides solutions to common problems in community gardening, including the design, optimization, and management of garden spaces. In addition, Garden Planner aims to allow gardeners to share resources and knowledge, as well as coordinate common plans.</p>
+    <p>Core features will include:</p>
+    <ul>
+    <li>Garden designer</li>
+    <li>Garden optimizer</li>
+    <li>Garden communities</li>
+    <li>Garden management</li>
+    </ul>
 </body>
 </html>
