--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
 <body>
     <h1 align="center">Garden Planner</h1>
     {% include 'navigation.html' %}
-    <p>Garden Planner provides solutions to common problems in community gardening, including the design, optimization, and management of garden spaces. In addition, Garden Planner aims to allow gardeners to share resources and knowledge, as well as coordinate common plans.</p>
+    <p>Garden Planner aims to provide solutions to common problems faced by community gardeners, including the design, optimization, and management of garden spaces. Garden Planner also aims to allow gardeners to connect with one another to share resources and knowledge, as well as coordinate common production plans within local areas.</p>
     <p>Core features will include:</p>
     <ul>
-    <li>Garden designer</li>
-    <li>Garden optimizer</li>
-    <li>Garden communities</li>
-    <li>Garden management</li>
+    <li>Garden design tools</li>
+    <li>Garden management tools</li>
+    <li>Garden optimization tools</li>
+    <li>Garden profiles</li>
     </ul>
 </body>
 </html>
