--- a/templates/maps.html
+++ b/templates/maps.html
@@ -10,21 +10,70 @@
     </style>
   </head>
   <body>
-    <h3>My Google Maps Demo</h3>
+    <h3>Garden Locations</h3>
     {% include 'navigation.html' %}
     <!--The div element for the map -->
     <div id="map"></div>
     <script>
   // Initialize and add the map
+  /**
   function initMap() {
   // The location of Shreveport
-  var shreveport = {lat: 32.4285844596, lng: -93.7042914101};
+  
+      
+  var shreveport = {lat: 32.495880, lng: -93.721130};
   // The map, centered at Uluru
   var map = new google.maps.Map(
-  document.getElementById('map'), {zoom: 4, center: shreveport});
+  document.getElementById('map'), {zoom: 15, center: shreveport});
   // The marker, positioned at Uluru
-  var marker = new google.maps.Marker({position: shreveport, map: map});
+  //var marker = new google.maps.Marker({position: shreveport, map: map});
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 4,
+    center: shreveport
+  });
+
+  var marker = new google.maps.Marker({
+    position: shreveport,
+    map: map,
+    title: 'Hello World!'
+  });
+  }
+  **/
+        // This example displays a marker at the center of Australia.
+// When the user clicks the marker, an info window opens.
+
+function initMap() {
+  var shreveport = {lat: 32.495880, lng: -93.721130};
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 15,
+    center: shreveport
+  });
+  //CHANGFE ME PLZ GOD
+  var contentString = '<div id="content">'+
+      '<div id="siteNotice">'+
+      '</div>'+
+      '<h1 id="firstHeading" class="firstHeading">LSU We Grow Together! Campus</h1>'+
+      '<div id="bodyContent">'+
+      '<p><b>1613 Martha St, Shreveport, LA 71101</b></p>'+
+      '</div>'+
+      '</div>';
+
+  var infowindow = new google.maps.InfoWindow({
+    content: contentString
+  });
+
+  var marker = new google.maps.Marker({
+    position: shreveport,
+    map: map,
+    title: 'LSU We Grow Together! Campus'
+  });
+  marker.addListener('click', function() {
+    infowindow.open(map, marker);
+  });
 }
+
+        
+        
     </script>
     <!--Load the API from the specified URL
     * The async attribute allows the browser to render the page while the API loads
