--- a/templates/design.html
+++ b/templates/design.html
@@ -27,6 +27,7 @@ svg {
 <li><input type="radio" name="options" id="resize">Resize</li>
 <li><input type="radio" name="options" id="draw">Add new container</li>
 <li><input type="radio" name="options" id="draw_plot">Add new plot</li>
+<li><input type="radio" name="options" id="select">Select feature</li>
 </ul>
 </div>
 <script src="{{url_for('static', filename='scripts/app.js')}}"></script>
