Added deletion feature, allowing elements to be deleted. Fixed bug where element could be selected without "selected" option being active

--- a/templates/design.html
+++ b/templates/design.html
@@ -41,6 +41,7 @@ svg {
     <div class="edit-bar">
         <input id="edit_input" type="text" placeholder="Edit 'contains' value" disabled></input>
         <input type="submit" id="edit_send" value="Edit" disabled></input>
+        <input type="submit" id="edit_delete" value="Delete" disabled></input>
     </div>
 </div>
 <script src="{{url_for('static', filename='scripts/app.js')}}"></script>
