--- a/templates/design.html
+++ b/templates/design.html
@@ -2,27 +2,17 @@
 <head>
 <title>Garden Planner</title>
 <!-- d3 import -->
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/main.css')}}">
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/designer.css')}}">
 <!---
 {% include 'navigation.html' %}
 -->
 <h3>Designer</h3>
 
-<style>
-svg {
-  background-color: #f0f0f0;
-}
-.selected {
-  stroke: black;
-  stroke-dasharray: 4px;
-  fill: #f0f0f0;
-  pointer-events: all;
-}
-</style>
 <div class="container">
     <div class="row">
         <div id="svg-container" class="col-8">
@@ -34,7 +24,7 @@ svg {
                 <li><input type="radio" name="options" id="resize">Resize</li>
                 <li><input type="radio" name="options" id="draw">Add new container</li>
                 <li><input type="radio" name="options" id="draw_plot">Add new plot</li>
-                <li><input type="radio" name="options" id="select">Select feature</li>
+                <li><input type="radio" name="options" id="select">Select feature, pan and zoom</li>
             </ul>
         </div>
     </div>
